--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,8 @@
 [pep8]
 indent-size = 2
+exclude = dividends_chaser/*,ipython_config.py
+
+[flake8]
+exclude = dividends_chaser/*,ipython_config.py
+ignore = E111,W291
+max-line-length = 120
