--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "python.pythonPath": "dividends_chaser/bin/python3.7"
+  "python.pythonPath": "dividends_chaser/bin/python3.7",
+  "python.linting.pylintEnabled": true,
+  "python.linting.flake8Enabled": false,
+  "python.formatting.provider": "autopep8"
 }
