--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,15 @@
 [pep8]
 indent-size = 2
-exclude = dividends_chaser/*,ipython_config.py
+exclude = dividends_env/*,ipython_config.py
 
 [flake8]
 exclude = dividends_chaser/*,ipython_config.py
 ignore = E111,W291
 max-line-length = 120
+
+[pylint]
+indent-size = 2
+disable = C0103,C0111,W0311,C0303,C0325,W1202,W0105,C0411,R0201,E0401,E0213,E1102
+ignore = dividends_env
+ignore-docstrings = yes
+output-format = colorized
