Fix a few lint errors

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,8 @@ max-line-length = 120
 
 [pylint]
 indent-size = 2
-disable = C0103,C0111,W0311,C0303,C0325,W1202,W0105,C0411,R0201,E0401,E0213,E1102
+disable = C0103,C0111,C0303,W1202,W0105,R0201,E0401,E0213,E1102,C0325
 ignore = dividends_env
 ignore-docstrings = yes
 output-format = colorized
+indent-string='  '
