Add buy function to robinhood

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ max-line-length = 120
 
 [pylint]
 indent-size = 2
-disable = C0103,C0111,C0303,W1202,W0105,R0201,E0401,E0213,E1102,C0325
+disable = C0103,C0111,C0303,W1202,W0105,R0201,E0401,E0213,E1102,C0325,W0108
 ignore = dividends_env
 ignore-docstrings = yes
 output-format = colorized
