--- a/supervisord.conf
+++ b/supervisord.conf
@@ -5,7 +5,7 @@ loglevel=debug
 logfile_maxbytes=0
 
 [program:celery]
-command=celery -A tasks worker --loglevel=info --concurrency=1
+command=celery -A tasks worker --loglevel=debug --concurrency=5
 startsecs=5
 
 [program:flower]
