--- a/supervisord.conf
+++ b/supervisord.conf
@@ -5,9 +5,9 @@ loglevel=debug
 logfile_maxbytes=0
 
 [program:celery]
-command=celery -A tasks worker --loglevel=info --concurrency=1
+command=celery -A tasks worker --loglevel=info --concurrency=4
 startsecs=5
 
 [program:flower]
-command=flower -A tasks --port=5555 --persistent=True --db=/tmp/flower
+command=flower -A tasks --port=5555 --persistent=True --db=data/flower
 stopsignal=TERM
