Add daily scheduler to update stocks

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -11,3 +11,6 @@ startsecs=5
 [program:flower]
 command=flower -A tasks --port=5555 --persistent=True --db=data/flower
 stopsignal=TERM
+
+[program:crontab]
+command=celery -A tasks beat
