--- a/.env.development.sample
+++ b/.env.development.sample
@@ -3,9 +3,9 @@ DB_HOST=localhost
 DB_DATABASE=dividend_chaser_development
 DB_USER=
 DB_PASSWORD=
-ENVIRONMENT=
 PASSWORD=
 USER_NAME=
 REDIS_URL=
 TZ=US/Eastern
 SENTRY_URL=
+ENVIRONMENT=development
